Fixed alignment again after breaking

--- a/public/styles/findmyplant.css
+++ b/public/styles/findmyplant.css
@@ -53,7 +53,8 @@ a  {
 }
 
 a:hover {
-
+    font-size: 31px;
+    color: rgb(31, 66, 31);
 }
 
 .button {
@@ -287,16 +288,20 @@ header {
         }
 
         .search-filter_button {
-
+            margin: 35px 0 0 13px;
         }
 
         .search-clear_button {
-
+            margin: 75px 0 0 13px;
         }
 
         .search-filter_button, .search-clear_button {
             padding: 10px;
             font-weight: 100;
+            color: #ccccbf;
+            background-color: #3a5840;;
+            border-radius: 25px;
+            /* justify-content: center; */
         }
 
     /* .fa-tint {
